Fix horizontal scrolling in How It Works section

--- a/web/app/routes/home.module.scss
+++ b/web/app/routes/home.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .root {
@@ -56,6 +57,8 @@
   width: 100%;
   padding: 4rem 1rem;
   background: linear-gradient(to bottom, #E8A47F, #5A3FBB);
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .howItWorksContainer {
